Encripté contraseña y validé que en ambos campos este escrito lo mismo